[TOOLS-4753] Volume info is not displayed for versions 10.1 and later of 'ServiceDashboard' (#252)
http://jira.cubrid.org/browse/TOOLS-4753

- Change the display of volume info in 'ServerDashboard'.